fix rocket on mobile

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -395,4 +395,8 @@ a:hover {
     font-size: .8em;
   }
 
+  .rocket {
+    display: none;
+  }
+
 }
